Modified reference of questions/answers

--- a/PenguTex.sty
+++ b/PenguTex.sty
@@ -91,11 +91,11 @@
 
 % New enum environments
 \newlist{questions}{enumerate}{2}
-\setlist[questions,1]{label=(\alph*), ref=\alph*}
+\setlist[questions,1]{label=(\alph*), ref=(\alph*)}
 \setlist[questions,2]{label=\roman*., ref=(\thequestionsi.\roman*)}
 
 \newlist{answers}{enumerate}{2}
-\setlist[answers]{label=(\alph*), ref=\alph*}
+\setlist[answers]{label=(\alph*), ref=(\alph*)}
 \setlist[answers,2]{label=\roman*., ref=(\theanswersi.\roman*)}
 
 % New cref names
