Added residue operator

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -35,6 +35,7 @@
 \DeclareMathOperator{\im}{Im}
 \DeclareMathOperator{\Arg}{Arg}
 \DeclareMathOperator{\Log}{Log}
+\DeclareMathOperator{\Res}{Res}
 
 % Helper "function" = f(x)
 \DeclareDocumentCommand{\fx}{mm}{#1\parenth*{#2}}
