Changed for subscripting behaviour

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -35,7 +35,7 @@
 \DeclareMathOperator{\im}{Im}
 \DeclareMathOperator{\Arg}{Arg}
 \DeclareMathOperator{\Log}{Log}
-\DeclareMathOperator{\Res}{Res}
+\DeclareMathOperator*{\Res}{Res} % Allow subscripts to be under the operator in display mode
 
 % Helper "function" = f(x)
 \DeclareDocumentCommand{\fx}{mm}{#1\parenth*{#2}}
