Reverted \integral to original definition and renamed existing command

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -58,13 +58,13 @@
 \newcommand{\logn}[2]{\log_{#1}\!{#2}}
 \newcommand*{\evalline}[3]{\ensuremath{\left.#1\right\rvert_{#2}^{#3}}}
 \ProvideDocumentCommand{\integral}{s m m e{_^}}{%
-    \IfValueTF{#5}{\int}{\IfValueTF{#4}{\oint}{\int}}%
+    \int%
     \IfValueT{#4}{_{#4}}%
     \IfValueT{#5}{^{#5}}%
     \IfBooleanTF{#1}{\parenth*{#3}}{#3}%
     \odif{#2}%
 }
-\ProvideDocumentCommand{\cint}{s m m}{\IfBooleanTF{#1}{\int_C}{\oint_C}#3\odif{#2}}
+\ProvideDocumentCommand{\ointegral}{s m m}{\IfBooleanTF{#1}{\int_C}{\oint_C}#3\odif{#2}}
 
 \DeclareMathOperator{\proj}{proj}
 \DeclareMathOperator{\nullspace}{null}
