--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -66,7 +66,7 @@
 }
 \ProvideDocumentCommand{\ointegral}{s m m e{_}}{%
     \oint%
-    \IfValueTF{#4}{_{#4}}{C}%
+    \IfValueTF{#4}{_{#4}}{_C}%
     \IfBooleanTF{#1}{\parenth*{#3}}{#3}%
     \odif{#2}%
 }
