Added inner product

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -29,6 +29,7 @@
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
+\DeclarePairedDelimiter{\inner}{\langle}{\rangle}
 
 % Math functions / operators
 \DeclareMathOperator{\re}{Re}
