Added field operator

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -48,6 +48,7 @@
 \newcommand{\field}[1]{\mathbb{#1}}
 \newcommand{\C}{\field{C}}
 \newcommand{\R}{\field{R}}
+\newcommand{\F}{\field{F}}
 \newcommand{\N}{\field{N}}
 \newcommand{\Z}{\field{Z}}
 \newcommand{\Primes}{\field{P}}
