Modified \inner definition to use mathtools

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -29,7 +29,7 @@
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
-\DeclarePairedDelimiter{\inner}{\langle}{\rangle}
+\DeclarePairedDelimiterX{\inner}[2]{\langle}{\rangle}{#1,#2}
 
 % Math functions / operators
 \DeclareMathOperator{\re}{Re}
