--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -38,6 +38,7 @@
 \DeclareMathOperator{\Arg}{Arg}
 \DeclareMathOperator{\Log}{Log}
 \DeclareMathOperator*{\Res}{Res} % Allow subscripts to be under the operator in display mode
+\DeclareMathOperator{\lcm}{lcm}
 
 % Helper "function" = f(x)
 \DeclareDocumentCommand{\fx}{mm}{#1\parenth*{#2}}
