--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -85,6 +85,7 @@
 \DeclareMathOperator{\nullspace}{null}
 \DeclareMathOperator{\rref}{rref}
 \DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\range}{range}
 
 % Environments
 \newtheorem{theorem}{Theorem}[section]
