Added Equation Line

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -107,3 +107,7 @@
     }{%
     \end{array}\right)
 }
+
+% Horizontal bar
+% https://tex.stackexchange.com/questions/254261/how-can-you-draw-a-horizontal-line-inside-an-align-environment/635159#635159
+\newcommand{\eqline}{\noalign{\smallskip} \hline \noalign{\smallskip}}
