--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -92,6 +92,8 @@
 \newtheorem*{theorem*}{Theorem}
 \newtheorem{definition}{Definition}[section]
 \newtheorem*{definition*}{Definition}
+\newtheorem{proposition}{Proposition}[section]
+\newtheorem*{proposition*}{Proposition}
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem*{corollary*}{Corollary}
 \newtheorem{lemma}[theorem]{Lemma}
