--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -69,6 +69,7 @@
 \DeclareMathOperator{\Log}{Log}
 \DeclareMathOperator*{\Res}{Res} % Allow subscripts to be under the operator in display mode
 \DeclareMathOperator{\lcm}{lcm}
+\DeclareMathOperator*{\esssup}{ess\,sup}
 
 % Helper "function" = f(x)
 \DeclareDocumentCommand{\fx}{mm}{#1\parenth*{#2}}
