Added \ran for alternate to \range

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -119,6 +119,7 @@
 \DeclareMathOperator{\rref}{rref}
 \DeclareMathOperator{\rank}{rank}
 \DeclareMathOperator{\range}{range}
+\DeclareMathOperator{\ran}{ran}
 
 % Environments
 \declaretheoremstyle[bodyfont=\normalfont]{normalbody}
