Added \Q for the rational field

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -86,6 +86,7 @@
 \newcommand{\F}{\field{F}}
 \newcommand{\N}{\field{N}}
 \newcommand{\Z}{\field{Z}}
+\newcommand{\Q}{\field{Q}}
 \newcommand{\Primes}{\field{P}}
 \newcommand{\BigO}[1]{\ensuremath{\mathcal{O}\parenth*{#1}}}
 \newcommand{\BigOmega}[1]{\ensuremath{\Omega\parenth*{#1}}}
