Corrected spelling error in environment name

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -125,7 +125,7 @@
 % Environments
 \declaretheoremstyle[bodyfont=\normalfont]{normalbody}
 
-\declaretheorem[numberwithin=section, style=normalbody]{theorem, definition, proposition, corrollary, lemma}
+\declaretheorem[numberwithin=section, style=normalbody]{theorem, definition, proposition, corollary, lemma}
 \declaretheorem[style=normalbody, numbered=no]{example, remark}
 
 % Matrices
