Added \charmath for characteristic function

--- a/PenguMath.sty
+++ b/PenguMath.sty
@@ -70,6 +70,7 @@
 \DeclareMathOperator{\Log}{Log}
 \DeclareMathOperator*{\Res}{Res} % Allow subscripts to be under the operator in display mode
 \DeclareMathOperator{\lcm}{lcm}
+\DeclareMathOperator{\charmath}{char}
 \DeclareMathOperator{\GL}{GL}
 \DeclareMathOperator*{\esssup}{ess\,sup}
 
